--- a/get_sealang_vocab/stock_photo_picker/package.json
+++ b/get_sealang_vocab/stock_photo_picker/package.json
@@ -14,7 +14,7 @@
     "cheerio": "^1.0.0-rc.2",
     "electron": "^3.0.1",
     "puppeteer": "^1.8.0",
-    "sequelize": "^4.39.0",
+    "sequelize": ">=5.3.0",
     "sqlite3": "^4.0.2",
     "then-request": "^6.0.0"
   }
